src/test/ui/rfc-2361-dbg-macro/dbg-macro-move-semantics.nll.stderr
error[E0382]: use of moved value: `a`
  --> $DIR/dbg-macro-move-semantics.rs:9:18
   |
LL |     let a = NoCopy(0);
   |         - move occurs because `a` has type `NoCopy`, which does not implement the `Copy` trait
LL |     let _ = dbg!(a);
   |             ------- value moved here
LL |     let _ = dbg!(a);
   |                  ^ value used here after move
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
